--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ conf/local_secret
 conf/monitoring/*
 !conf/monitoring/*.example
 conf/nessus/remotescan.nessus
+conf/pfitemconfig.conf
 conf/networks.conf
 conf/radiusd/acct.conf
 conf/radiusd/auth.conf
