--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ conf/log.conf
 conf/chi.conf
 conf/dhcp_filters.conf
 conf/local_secret
+conf/maintenance.conf
 conf/monitoring/*
 !conf/monitoring/*.example
 conf/nessus/remotescan.nessus
