--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,7 @@ conf/redis_ntlm_cache.conf
 conf/realm.conf
 conf/domain.conf
 conf/radius_filters.conf
+conf/switch_filters.conf
 conf/scan.conf
 conf/pfqueue.conf
 conf/pfmon.conf
