touchups to pf.conf doc

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1464,7 +1464,7 @@ EOT
 [maintenance.node_cleanup_window]
 type=time
 description=<<EOT
-How long can an unregistered node be inactive on the network before being deleted
+How long can an unregistered node be inactive on the network before being deleted.
 This shouldn't be used if you are using port-security
 EOT
 
