--- a/t/data/htpasswd.conf
+++ b/t/data/htpasswd.conf
@@ -5,3 +5,4 @@ set_unreg_date_test:8TG0DubvapZNw
 match_on_authentication_class_without_rule_class_test:8TG0DubvapZNw
 match_on_administration_class_without_rule_class_test:8TG0DubvapZNw
 match_action:EsPntDPiUshK.
+in_time_period:B8yVXojzQvqO2
