--- a/conf/mariadb/mariadb.conf.tt.example
+++ b/conf/mariadb/mariadb.conf.tt.example
@@ -109,7 +109,7 @@ server-id = [% server_id %]
 
 # Uncomment the following if you are using InnoDB tables
 innodb_data_home_dir = /var/lib/mysql
-innodb_data_file_path = ibdata1:2000M;ibdata2:10M:autoextend
+innodb_data_file_path = ibdata1:100M;ibdata2:10M:autoextend
 innodb_log_group_home_dir = /var/lib/mysql
  #You can set .._buffer_pool_size up to 50 - 80 %
  #of RAM but beware of setting memory usage too high
@@ -146,9 +146,10 @@ wsrep_cluster_address="gcomm://[% servers_ip.join(',') %]"
 wsrep_node_name=[% hostname %]
 wsrep_node_address="[% server_ip %]"
 wsrep_on=ON 
-wsrep_sst_method = xtrabackup
+wsrep_sst_method = rsync
 wsrep_sst_auth = "[% replication_user %]:[% replication_password %]"
 wsrep_notify_cmd=/usr/local/pf/var/run/db-update
+wsrep_provider_options='pc.npvo=true'
 #
 # Allow server to accept connections on all interfaces.
 #
