--- a/conf/systemd/packetfence-mariadb.service
+++ b/conf/systemd/packetfence-mariadb.service
@@ -2,6 +2,7 @@
 Description=PacketFence MariaDB instance
 After=syslog.target
 After=network.target
+Conflicts=mysql.service mariadb.service
 
 [Service]
 Type=simple
