Add additional configuration for testing

--- a/t/data/pfdetect.conf
+++ b/t/data/pfdetect.conf
@@ -12,3 +12,13 @@ path=/dev/null
 type=snort
 status=enabled
 path=/dev/null
+
+[suricata_md5]
+type=suricata_md5
+status=enabled
+path=/dev/null
+
+[fortianalyser]
+type=fortianalyser
+status=enabled
+path=/dev/null
