remove test files in caddy-clean-src

--- a/go/Makefile
+++ b/go/Makefile
@@ -16,4 +16,4 @@ _pfcaddy:
 
 clean-caddy-src:
 	find caddy/caddy/ -type f -exec sed -i.bak "s'github.com/mholt/caddy'github.com/inverse-inc/packetfence/go/caddy/caddy'g" {} \; ; find . -name '*.bak' -delete
-	find caddy/caddy/ -name '*_test.go'
+	find caddy/caddy/ -name '*_test.go' -delete
