Add new parameter advanced.pffilter_processes

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1446,6 +1446,12 @@ description=<<EOT
 Amount of pfdns processes to start
 EOT
 
+[advanced.pffilter_processes]
+type=text
+description=<<EOT
+Amount of pffilter processes to start
+EOT
+
 [advanced.update_iplog_with_accounting]
 type=toggle
 options=enabled|disabled
