Add pffilter service configuration

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -147,6 +147,13 @@ description=<<EOT
 Should pfdns be managed by PacketFence?
 EOT
 
+[services.pffilter]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Should pffilter be managed by PacketFence?
+EOT
+
 [services.snort]
 type=toggle
 options=enabled|disabled
@@ -620,6 +627,13 @@ EOT
 type=numeric
 description=<<EOT
 Order in which the service should be started. 
+Lower order services start first and stop last.
+EOT
+
+[services.pffilter_order]
+type=numeric
+description=<<EOT
+Order in which the service should be started.
 Lower order services start first and stop last.
 EOT
 
