Block for 10s if the device hit the cpative portal more than 30 times in 10s

--- a/conf/passthrough.lua.tt.example
+++ b/conf/passthrough.lua.tt.example
@@ -12,10 +12,12 @@
 local string = require("string");
 
 core.register_action("select", { "http-req" }, function(txn)
-
     local backend = nil
 
     if ( not ([% FOREACH host IN portal_host %] string.match(txn.sf:req_fhdr("Host"), '[% host %]') or[% END %] false ) ) then
         txn:set_var("req.action","proxy")
+    elseif ( ([% FOREACH host IN portal_host %] string.match(txn.sf:req_fhdr("Host"), '[% host %]') or[% END %] false ) and txn.sf:path() == '/') then
+        txn:set_var("req.action","proxy")
     end
 end)
+
