--- a/conf/haproxy.conf.example
+++ b/conf/haproxy.conf.example
@@ -67,5 +67,10 @@ backend proxy
     http-request set-uri http://127.0.0.1:8888%[path]?%[query] if paramsquery
     http-request set-uri http://127.0.0.1:8888%[path] unless paramsquery
 
+backend static
+    option httpclose
+    option http_proxy
+    option forwardfor
+    http-request set-uri http://127.0.0.1:8889%[path]?%[query]
 
 %%http%%
