--- a/conf/passthrough.lua.tt.example
+++ b/conf/passthrough.lua.tt.example
@@ -16,8 +16,11 @@ core.register_action("select", { "http-req" }, function(txn)
 
     if ( not ([% FOREACH host IN portal_host %] string.match(txn.sf:req_fhdr("Host"), '[% host %]') or[% END %] false ) ) then
         txn:set_var("req.action","proxy")
-    elseif ( ([% FOREACH host IN portal_host %] string.match(txn.sf:req_fhdr("Host"), '[% host %]') or[% END %] false ) and txn.sf:path() == '/') then
-        txn:set_var("req.action","proxy")
+    elseif ([% FOREACH host IN portal_host %] string.match(txn.sf:req_fhdr("Host"), '[% host %]') or[% END %] false ) then
+        if (txn.sf:path() == '/') then
+            txn:set_var("req.action","proxy")
+        elseif ( string.match(txn.sf:path(), '/common') or string.match(txn.sf:path(), '/content') or string.match(txn.sf:path(), '/favicon.ico') ) then
+            txn:set_var("req.action","static")
+        end
     end
 end)
-
