--- a/conf/systemd/packetfence-config.service
+++ b/conf/systemd/packetfence-config.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=PacketFence Config Service
-After=network.target packetfence-redis-cache.target
+After=network.target packetfence-redis-cache.service
 Wants=packetfence-redis-cache.service
 
 [Service]
