Serve static content from httpdispatcher

--- a/conf/caddy-services/httpdispatcher.conf
+++ b/conf/caddy-services/httpdispatcher.conf
@@ -2,3 +2,12 @@
   logger
   httpdispatcher
 }
+
+127.0.0.1:8889/common {
+  root /usr/local/pf/html/common
+}
+
+
+127.0.0.1:8889/content {
+  root /usr/local/pf/html/captive-portal/content
+}
