Add favicon static path

--- a/conf/caddy-services/httpdispatcher.conf
+++ b/conf/caddy-services/httpdispatcher.conf
@@ -3,6 +3,10 @@
   httpdispatcher
 }
 
+127.0.0.1:8889 {
+  root /where/is/favicon
+}
+
 127.0.0.1:8889/common {
   root /usr/local/pf/html/common
 }
