--- a/conf/caddy-services/httpdispatcher.conf
+++ b/conf/caddy-services/httpdispatcher.conf
@@ -3,15 +3,16 @@
   httpdispatcher
 }
 
-127.0.0.1:8889 {
-  root /where/is/favicon
+:8889 {
+  root /usr/local/pf/html/common
 }
 
-127.0.0.1:8889/common {
+:8889/common {
   root /usr/local/pf/html/common
 }
 
 
-127.0.0.1:8889/content {
+:8889/content {
   root /usr/local/pf/html/captive-portal/content
 }
+
