Added an advanced configuration parameter to enable/disable multihost

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1209,6 +1209,13 @@ description=<<EOT
 The source to use to send an SMS when creating a user
 EOT
 
+[advanced.multihost]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Ability to manage all active devices from a same switch port
+EOT
+
 [omapi.ip2mac_lookup]
 type=toggle
 options=enabled|disabled
