add support for arrays in pfconfig golang

--- a/t/data/pf.conf
+++ b/t/data/pf.conf
@@ -14,3 +14,16 @@ type=management
 ip=10.0.0.13
 mask=255.255.255.224
 vip=10.0.0.13
+
+[interface eth1.1]
+ip=192.168.1.1
+type=internal
+mask=255.255.255.0
+enforcement=vlan
+
+[interface eth1.2]
+enforcement=vlan
+ip=192.168.2.1
+type=internal
+mask=255.255.255.0
+
