additionnal mariadb config params

--- a/conf/mariadb/mariadb.conf.tt.example
+++ b/conf/mariadb/mariadb.conf.tt.example
@@ -15,13 +15,13 @@ port    = 3306
 socket    = /var/lib/mysql/mysql.sock
 skip-external-locking
 key_buffer_size = [% key_buffer_size %]M
-max_allowed_packet = 16M
+max_allowed_packet = [% max_allowed_packet %]M
 table_open_cache = 512
 sort_buffer_size = 2M
 read_buffer_size = 2M
 read_rnd_buffer_size = 8M
 myisam_sort_buffer_size = 64M
-thread_cache_size = 10
+thread_cache_size = [% thread_cache_size %]
 query_cache_size = [% query_cache_size %]M
 # Try number of CPU's*2 for thread_concurrency
 thread_concurrency = [% thread_concurrency %]
