--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1053,6 +1053,18 @@ description=<<EOT
 The table_cache MySQL configuration attribute. Only change if you know what you are doing. Will only affect a locally running MySQL server.
 EOT
 
+[database.thread_cache_size]
+type=numeric
+description=<<EOT
+The thread_cache_size MySQL configuration attribute. Only change if you know what you are doing. Will only affect a locally running MySQL server.
+EOT
+
+[database.max_allowed_packet]
+type=numeric
+description=<<EOT
+The max_allowed_packet MySQL configuration attribute (in MB). Only change if you know what you are doing. Will only affect a locally running MySQL server.
+EOT
+
 [vlan.closelocationlogonstop]
 type=toggle
 options=enabled|disabled
