--- a/conf/log.conf.d/pffilter.conf.example
+++ b/conf/log.conf.d/pffilter.conf.example
@@ -1,18 +1,18 @@
 ### pffilter logger ###
-log4perl.rootLogger = INFO, PFFILITER
+log4perl.rootLogger = INFO, PFFILTER
 
 ### Categories ###
 # Below, you can specify different categories (based on package names) for different logging levels
 #log4perl.category.pf.SNMP = WARN
 
 ### Logging for pffilter
-log4perl.appender.PFFILITER                              = pf::log::FileAppender
-log4perl.appender.PFFILITER.filename                     = /usr/local/pf/logs/pffilter.log
-log4perl.appender.PFFILITER.syswrite                     = 1
-log4perl.appender.PFFILITER.mode                         = append
-log4perl.appender.PFFILITER.layout                       = PatternLayout
-log4perl.appender.PFFILITER.layout.ConversionPattern     = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: %m (%M)%n
-log4perl.appender.PFFILITER.umask                        = 0002
-log4perl.appender.PFFILITER.user                         = pf
-log4perl.appender.PFFILITER.group                        = pf
-log4perl.appender.PFFILITER.binmode                      = utf8
+log4perl.appender.PFFILTER                              = pf::log::FileAppender
+log4perl.appender.PFFILTER.filename                     = /usr/local/pf/logs/pffilter.log
+log4perl.appender.PFFILTER.syswrite                     = 1
+log4perl.appender.PFFILTER.mode                         = append
+log4perl.appender.PFFILTER.layout                       = PatternLayout
+log4perl.appender.PFFILTER.layout.ConversionPattern     = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: %m (%M)%n
+log4perl.appender.PFFILTER.umask                        = 0002
+log4perl.appender.PFFILTER.user                         = pf
+log4perl.appender.PFFILTER.group                        = pf
+log4perl.appender.PFFILTER.binmode                      = utf8
