implement cache update for pfsso

--- a/t/data/firewall_sso.conf
+++ b/t/data/firewall_sso.conf
@@ -20,6 +20,7 @@ type=PaloAlto
 categories=default,gaming
 port=443
 cache_updates=0
+cache_timeout=3600
 password=ptothetotheltotheotothealto
 
 [invalid_type]
