--- a/conf/systemd/packetfence-httpd.portal.service
+++ b/conf/systemd/packetfence-httpd.portal.service
@@ -3,7 +3,7 @@ Description=PacketFence Captive Portal Apache HTTP Server
 Documentation=man:httpd(8)
 Documentation=man:apachectl(8)
 Wants=packetfence-base.target packetfence-config.service packetfence-iptables.service
-After=packetfence-base.target packetfence-config.service packetfence-iptables.service packetfence-haproxy.service packetfence-pfdns.service packetfence-dhcpd.config
+After=packetfence-base.target packetfence-config.service packetfence-iptables.service packetfence-haproxy.service packetfence-pfdns.service packetfence-dhcpd.service
 
 [Service]
 Type=simple
