--- a/conf/systemd/packetfence-haproxy.service
+++ b/conf/systemd/packetfence-haproxy.service
@@ -5,6 +5,8 @@ Before=packetfence-httpd.portal.service packetfence-httpd.admin.service
 Wants=packetfence.target packetfence-iptables.service
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/haproxy.pid
 ExecStartPre=/usr/local/pf/bin/pfcmd service haproxy generateconfig
 ExecStart=/usr/sbin/haproxy-systemd-wrapper -f /usr/local/pf/var/conf/haproxy.conf -p /usr/local/pf/var/run/haproxy.pid
