--- a/conf/systemd/packetfence-redis-cache.service
+++ b/conf/systemd/packetfence-redis-cache.service
@@ -4,6 +4,8 @@ After=network.target
 Before=packetfence-config.service
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/redis_cache.pid
 ExecStart=/usr/bin/redis-server /usr/local/pf/conf/redis_cache.conf --daemonize no
 ExecStop=/usr/bin/kill $MAINPID
