--- a/conf/systemd/packetfence-carbon-cache.service
+++ b/conf/systemd/packetfence-carbon-cache.service
@@ -4,6 +4,8 @@ Wants=packetfence-base.target packetfence-config.service packetfence-iptables.se
 After=packetfence-base.target packetfence-config.service packetfence-iptables.service
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 Type=simple
 User=pf
 PIDFile=/usr/local/pf/var/run/carbon-cache.pid
