--- a/conf/systemd/packetfence-httpd.aaa.service
+++ b/conf/systemd/packetfence-httpd.aaa.service
@@ -7,6 +7,8 @@ After=packetfence-base.target packetfence-config.service packetfence-iptables.se
 Before=packetfence-radiusd-auth.service packetfence-radiusd-acct.service packetfence-radiusd-cli.service
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 Type=simple
 PIDFile=/usr/local/pf/var/run/httpd.aaa.pid
 ExecStartPre=/usr/local/pf/bin/pfcmd service httpd.aaa generateconfig
