--- a/conf/systemd/packetfence-httpd.portal.service
+++ b/conf/systemd/packetfence-httpd.portal.service
@@ -6,6 +6,8 @@ Wants=packetfence-base.target packetfence-config.service packetfence-iptables.se
 After=packetfence-base.target packetfence-config.service packetfence-iptables.service packetfence-haproxy.service packetfence-pfdns.service packetfence-dhcpd.service
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 Type=simple
 PIDFile=/usr/local/pf/var/run/httpd.portal.pid
 ExecStartPre=/usr/local/pf/bin/pfcmd service httpd.portal generateconfig
