--- a/conf/systemd/packetfence-p0f.service
+++ b/conf/systemd/packetfence-p0f.service
@@ -4,6 +4,8 @@ Wants=packetfence-base.target packetfence-config.service packetfence-iptables.se
 After=packetfence-base.target packetfence-config.service packetfence-iptables.service
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 Type=simple
 PIDFile=/usr/local/pf/var/run/p0f.pid
 ExecStart=/usr/local/bin/p0f -i any -p -f /usr/local/fingerbank/conf/fingerbank-p0f.fp -s /var/run/p0f.sock 
