--- a/conf/systemd/packetfence-pfsetvlan.service
+++ b/conf/systemd/packetfence-pfsetvlan.service
@@ -6,6 +6,8 @@ Wants=packetfence-snmptrapd.service
 Wants=packetfence-base.target packetfence-config.service packetfence-iptables.service
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/pfsetvlan.pid
 ExecStart=/usr/local/pf/sbin/pfsetvlan
 Slice=packetfence.slice
