--- a/conf/systemd/packetfence-radiusd-acct.service
+++ b/conf/systemd/packetfence-radiusd-acct.service
@@ -8,6 +8,8 @@ Wants=packetfence-base.target packetfence-config.service packetfence-iptables.se
 After=packetfence-base.target packetfence-config.service packetfence-iptables.service 
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/radiusd-acct.pid
 ExecStartPre=/usr/local/pf/bin/pfcmd service radiusd generateconfig
 ExecStart=/usr/sbin/radiusd -d /usr/local/pf/raddb  -n acct -fm 
