--- a/conf/systemd/packetfence-radiusd-auth.service
+++ b/conf/systemd/packetfence-radiusd-auth.service
@@ -7,6 +7,8 @@ Wants=packetfence-base.target packetfence-config.service packetfence-iptables.se
 After=packetfence-base.target packetfence-config.service packetfence-iptables.service 
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/radiusd-auth.pid
 ExecStartPre=/usr/local/pf/bin/pfcmd service radiusd generateconfig
 ExecStart=/usr/sbin/radiusd -d /usr/local/pf/raddb  -n auth -fm 
