--- a/conf/systemd/packetfence-radiusd-cli.service
+++ b/conf/systemd/packetfence-radiusd-cli.service
@@ -8,6 +8,8 @@ Wants=packetfence-base.target packetfence-config.service packetfence-iptables.se
 After=packetfence-base.target packetfence-config.service packetfence-iptables.service
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/radiusd-cli.pid
 ExecStart=/usr/sbin/radiusd -d /usr/local/pf/raddb  -n cli -fm 
 ExecStartPre=/usr/local/pf/bin/pfcmd service radiusd generateconfig
