--- a/conf/systemd/packetfence-radsniff.service
+++ b/conf/systemd/packetfence-radsniff.service
@@ -6,6 +6,8 @@ Wants=packetfence-base.target packetfence-config.service packetfence-iptables.se
 After=packetfence-base.target packetfence-config.service packetfence-iptables.service
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 Type=forking
 PIDFile=/usr/local/pf/var/run/radsniff.pid
 ExecStart=/usr/bin/radsniff -d /usr/local/pf/raddb/ -D /usr/local/pf/raddb/ -q -P /usr/local/pf/var/run/radsniff.pid -W10 -O /usr/local/pf/var/run/collectd-unixsock -i ens192
