--- a/conf/systemd/packetfence-statsd.service
+++ b/conf/systemd/packetfence-statsd.service
@@ -4,6 +4,8 @@ After=packetfence-carbon-relay.service packetfence-iptables.service packetfence-
 Wants=packetfence-carbon-relay.service packetfence-iptables.service packetfence-base.target
 
 [Service]
+StartLimitBurst=3
+StartLimitInterval=60
 Type=simple
 PIDFile=/usr/local/pf/var/run/statsd.pid
 ExecStartPre=/usr/local/pf/bin/pfcmd service statsd generateconfig
