--- a/conf/systemd/packetfence-iptables.service
+++ b/conf/systemd/packetfence-iptables.service
@@ -4,6 +4,7 @@ Wants=packetfence-config.service
 After=packetfence-config.service
 
 [Service]
+StandardOutput=syslog
 StartLimitBurst=3
 StartLimitInterval=60
 Type=oneshot
