--- a/conf/systemd/packetfence-keepalived.service
+++ b/conf/systemd/packetfence-keepalived.service
@@ -4,6 +4,7 @@ After=packetfence.target packetfence-haproxy.service
 Wants=packetfence.target packetfence-iptables.service
 
 [Service]
+StandardOutput=syslog
 StartLimitBurst=3
 StartLimitInterval=60
 Type=forking
