--- a/conf/systemd/packetfence-winbindd.service
+++ b/conf/systemd/packetfence-winbindd.service
@@ -4,6 +4,7 @@ After=packetfence-base.target
 Wants=packetfence-base.target packetfence-config.service packetfence-iptables.service
 
 [Service]
+StandardOutput=syslog
 StartLimitBurst=3
 StartLimitInterval=60
 Environment=KRB5CCNAME=FILE:/run/samba/krb5cc_samba
