--- a/conf/systemd/packetfence-dhcpd.service
+++ b/conf/systemd/packetfence-dhcpd.service
@@ -6,6 +6,7 @@ After=packetfence-base.target packetfence-config.service packetfence-iptables.se
 Before=packetfence-httpd.portal.service
 
 [Service]
+StandardOutput=syslog
 StartLimitBurst=3
 StartLimitInterval=60
 Type=notify
