--- a/conf/systemd/packetfence-haproxy.service
+++ b/conf/systemd/packetfence-haproxy.service
@@ -5,6 +5,7 @@ Before=packetfence-httpd.portal.service packetfence-httpd.admin.service
 Wants=packetfence.target packetfence-iptables.service
 
 [Service]
+StandardOutput=syslog
 StartLimitBurst=3
 StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/haproxy.pid
