--- a/conf/systemd/packetfence-httpd.aaa.service
+++ b/conf/systemd/packetfence-httpd.aaa.service
@@ -7,6 +7,7 @@ After=packetfence-base.target packetfence-config.service packetfence-iptables.se
 Before=packetfence-radiusd-auth.service packetfence-radiusd-acct.service packetfence-radiusd-cli.service
 
 [Service]
+StandardOutput=syslog
 StartLimitBurst=3
 StartLimitInterval=60
 Type=simple
