--- a/conf/systemd/packetfence-mariadb.service
+++ b/conf/systemd/packetfence-mariadb.service
@@ -7,6 +7,7 @@ Requires=packetfence-config.service
 Conflicts=mysql.service mariadb.service
 
 [Service]
+StandardOutput=syslog
 StartLimitBurst=3
 StartLimitInterval=60
 Type=simple
