--- a/conf/systemd/packetfence-pfsetvlan.service
+++ b/conf/systemd/packetfence-pfsetvlan.service
@@ -6,6 +6,7 @@ Wants=packetfence-snmptrapd.service
 Wants=packetfence-base.target packetfence-config.service packetfence-iptables.service
 
 [Service]
+StandardOutput=syslog
 StartLimitBurst=3
 StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/pfsetvlan.pid
