--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -154,6 +154,13 @@ description=<<EOT
 Should pffilter be managed by PacketFence?
 EOT
 
+[services.pfsso]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Should pfsso be managed by PacketFence?
+EOT
+
 [services.snort]
 type=toggle
 options=enabled|disabled
