Network interfaces modification

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -722,14 +722,27 @@ EOT
 [interface.ip]
 type=text
 description=<<EOT
-IP address of the named interface - note that this should mirror the 
+IPv4 address of the named interface - note that this should mirror the 
 OS-level configuration but it does not make any OS-level changes.
 EOT
 
 [interface.mask]
 type=text
 description=<<EOT
-Network mask of the named interface.
+Network mask for the IPv4 address of the named interface.
+EOT
+
+[interface.ipv6_address]
+type=text
+description=<<EOT
+IPv6 address of the named interface - note that this should mirror the 
+OS-level configuration but it does not make any OS-level changes.
+EOT
+
+[interface.ipv6_prefix]
+type=text
+description=<<EOT
+Prefix for the IPv6 address of the named interface.
 EOT
 
 [interface.type]
