--- a/conf/iptables.conf.example
+++ b/conf/iptables.conf.example
@@ -124,7 +124,8 @@
 :input-highavailability-if - [0:0]
 #SSH
 -A input-highavailability-if --match state --state NEW --match tcp --protocol tcp --dport 22 --jump ACCEPT
-#DRBD
+#Galera cluster
+-A input-highavailability-if --protocol tcp --match tcp --dport 4444 --jump ACCEPT
 -A input-highavailability-if --protocol tcp --match tcp --dport 4567 --jump ACCEPT
 # Corosync
 -A input-highavailability-if --protocol udp --match udp --dport 5405 --jump ACCEPT
