--- a/conf/mariadb/mariadb.conf.tt.example
+++ b/conf/mariadb/mariadb.conf.tt.example
@@ -143,7 +143,7 @@ wsrep_cluster_address="gcomm://[% servers_ip.join(',') %]"
 wsrep_node_name=[% hostname %]
 wsrep_node_address="[% server_ip %]"
 wsrep_on=ON 
-wsrep_sst_method = rsync
+wsrep_sst_method = xtrabackup
 wsrep_sst_auth = "[% replication_user %]:[% replication_password %]"
 wsrep_notify_cmd=/usr/local/pf/var/run/db-update
 wsrep_provider_options='pc.npvo=true'
