reactivate statsd by default

--- a/conf/caddy-services/pfsso.conf
+++ b/conf/caddy-services/pfsso.conf
@@ -3,10 +3,10 @@ localhost:8777 {
   logger {
     level INFO
   }
-#  statsd {
-#    proto udp
-#    prefix pfsso
-#  }
+  statsd {
+    proto udp
+    prefix pfsso
+  }
   pfsso
 }
 
