--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ conf/git_commit_id
 conf/log.conf.d/*.conf
 conf/nessus/
 conf/currently-at
+conf/caddy-services/pfsso.conf
 bin/pfcmd
 bin/ntlm_auth_wrapper
 src/pfcmd
