--- a/conf/systemd/packetfence-haproxy.service
+++ b/conf/systemd/packetfence-haproxy.service
@@ -15,4 +15,4 @@ ExecReload=/bin/kill -USR2 $MAINPID
 Restart=on-failure
 
 [Install]
-WantedBy=packetfence-cluster.target
+WantedBy=packetfence.target
