--- a/conf/systemd/packetfence-haproxy.service
+++ b/conf/systemd/packetfence-haproxy.service
@@ -2,7 +2,7 @@
 Description=PacketFence HAProxy Load Balancer
 After=packetfence-iptables.service
 Before=packetfence-httpd.portal.service packetfence-httpd.admin.service 
-Wants=packetfence-base.target packetfence-iptables.service
+Wants=packetfence-config.service 
 
 [Service]
 StandardOutput=syslog
@@ -15,4 +15,4 @@ ExecReload=/bin/kill -USR2 $MAINPID
 Restart=on-failure
 
 [Install]
-WantedBy=packetfence.target
+WantedBy=packetfence-base.target
