call govendor in make test

--- a/go/Makefile
+++ b/go/Makefile
@@ -28,5 +28,5 @@ clean-caddy-src:
 
 test:
 	/usr/local/pf/t/pfconfig-test ;\
-	PFCONFIG_TESTING=y go test ./... ;\
+	PFCONFIG_TESTING=y govendor test ./... ;\
 	pkill pfconfig-test
