added make go-env to setup dev environment

--- a/go/Makefile
+++ b/go/Makefile
@@ -24,6 +24,11 @@ clean-caddy-src:
 	find caddy/caddy/ -type f -exec sed -i.bak "s'github.com/mholt/caddy'github.com/inverse-inc/packetfence/go/caddy/caddy'g" {} \; ; find . -name '*.bak' -delete
 	find caddy/caddy/ -name '*_test.go' -delete
 
+.PHONY: go-env
+
+go-env:
+	/usr/local/pf/addons/dev-helpers/setup-go-env.sh
+
 .PHONY: test
 
 test:
