--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -224,6 +224,13 @@ description=<<EOT
 Should httpd.collector be started? Keep enabled unless you know what you're doing.
 EOT
 
+[services.httpd_dispatcher]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Should httpd.dispatcher be started? Keep enabled unless you know what you're doing.
+EOT
+
 [services.httpd_aaa]
 type=toggle
 options=enabled|disabled
