basic dumb job to expire database CHI

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1559,6 +1559,11 @@ description=<<EOT
 Interval at which PacketFence populates the NTLM cache
 EOT
 
+[maintenance.cleanup_chi_database_cache_interval]
+type=time
+description=<<EOT
+Interval at which PacketFence cleans up the CHI database storage
+EOT
 
 [active_active.password]
 type=text
