cleanup chi cache using a direct query

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1565,6 +1565,19 @@ description=<<EOT
 Interval at which PacketFence cleans up the CHI database storage
 EOT
 
+[maintenance.cleanup_chi_database_cache_batch]
+type=numeric
+description=<<EOT
+How many expired CHI database entries does pfmon batches
+EOT
+
+[maintenance.cleanup_chi_database_cache_timeout]
+type=time
+description=<<EOT
+How long is the cleanup_chi_database_cache task is allowed to run
+EOT
+
+
 [active_active.password]
 type=text
 description=<<EOT
