--- a/conf/haproxy.conf.example
+++ b/conf/haproxy.conf.example
@@ -51,9 +51,11 @@ frontend  main
 backend mysql
     mode tcp
     option tcplog
-    option external-check
-    external-check command /usr/local/pf/var/run/db-check
-    external-check path "/usr/bin:/bin"
+    # disabled for now since it proved to be useless - jsemaan@inverse.ca
+    # TODO: remove it after cluster testing
+    #option external-check
+    #external-check command /usr/local/pf/var/run/db-check
+    #external-check path "/usr/bin:/bin"
 %%mysql_backend%%
 
 backend proxy
