--- a/conf/radiusd/packetfence.example
+++ b/conf/radiusd/packetfence.example
@@ -331,10 +331,10 @@ post-auth {
 	# send it to packetfence
 	if (! EAP-Type || (EAP-Type != TTLS  && EAP-Type != PEAP) ) {
 		rest
-                update {
-                       &request:User-Password := "******"
-                }
-		if (&reply:PacketFence-Authorization-Status == "deny") {
+		update {
+			&request:User-Password := "******"
+		}
+		if (&control:PacketFence-Authorization-Status == "deny") {
 			packetfence-audit-log-reject
 			reject
 		} else {
@@ -355,8 +355,8 @@ post-auth {
 	#
 	Post-Auth-Type REJECT {
 		update {
-                        &request:User-Password := "******"
-                }
+			&request:User-Password := "******"
+		}
 		if (! EAP-Type || (EAP-Type != TTLS  && EAP-Type != PEAP) ) {
 			packetfence-audit-log-reject
 		}
