Change keepalived router_id to a more sensible value
replaces PR #1520

--- a/conf/keepalived.conf.example
+++ b/conf/keepalived.conf.example
@@ -5,7 +5,7 @@ global_defs {
    notification_email_from %%fromaddr%%
    smtp_server %%smtpserver%%
    smtp_connect_timeout 30
-   router_id LVS_DEVEL
+   router_id PacketFence
 }
 
 vrrp_script haproxy {
