--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1247,40 +1247,40 @@ description=<<EOT
 Defines the replication password to be used for the MariaDB Galera cluster replication
 EOT
 
-[monitoring.graphite_host]
+[graphite.graphite_host]
 type=text
 description=<<EOT
 Host to which graphite metrics are sent.
 EOT
 
-[monitoring.graphite_port]
+[graphite.graphite_port]
 type=numeric
 description=<<EOT
 Port on the graphite host to which metrics are sent.
 EOT
 
-[monitoring.db_port]
+[graphite.db_port]
 type=numeric
 description=<<EOT
 The port to connect to the database storing the Graphite dashboard settings. 
 Will default to database.port if none is provided.
 EOT
 
-[monitoring.db_host]
+[graphite.db_host]
 type=text
 description=<<EOT
 The hostname of the the database storing the Graphite dashboard settings. 
 Will default to database.host if none is provided.
 EOT
 
-[monitoring.db_user]
+[graphite.db_user]
 type=text
 description=<<EOT
 The username to access the database storing the Graphite dashboard settings. 
 Will default to database.user if none is provided.
 EOT
 
-[monitoring.db_pass]
+[graphite.db_pass]
 type=obfuscated
 description=<<EOT
 The password to access the database storing the Graphite dashboard settings. 
