--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ conf/allowed_device_oui.txt
 conf/apache_filters.conf
 conf/firewall_sso.conf
 conf/vlan_filters.conf
+conf/roles.conf
 conf/pf_omapi_key
 conf/access_filters.conf
 html/captive-portal/captive_portal.conf
