add missing port for IST in iptables

--- a/conf/iptables.conf.example
+++ b/conf/iptables.conf.example
@@ -127,6 +127,7 @@
 #Galera cluster
 -A input-highavailability-if --protocol tcp --match tcp --dport 4444 --jump ACCEPT
 -A input-highavailability-if --protocol tcp --match tcp --dport 4567 --jump ACCEPT
+-A input-highavailability-if --protocol tcp --match tcp --dport 4568 --jump ACCEPT
 #PacketFence MariaDB Quorum server
 -A input-highavailability-if --protocol tcp --match tcp --dport 7890 --jump ACCEPT
 -A input-highavailability-if --protocol tcp --match tcp --dport 7891 --jump ACCEPT
