--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,7 @@ conf/templates/emails-guest_sponsor_confirmed.txt.tt
 conf/templates/emails-guest_sponsor_preregistration.txt.tt
 conf/dns_filters.conf
 conf/mariadb/*.tt
+conf/multi-cluster/
 html/pfappserver/pfappserver.conf
 html/captive-portal/captiveportal.conf
 nytprof/
