remove service management for snort/suricata and hide binary path

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -155,20 +155,6 @@ description=<<EOT
 Should pfsso be managed by PacketFence?
 EOT
 
-[services.snort]
-type=toggle
-options=enabled|disabled
-description=<<EOT
-Should snort be managed by PacketFence?
-EOT
-
-[services.suricata]
-type=toggle
-options=enabled|disabled
-description=<<EOT
-Should suricata be managed by PacketFence?
-EOT
-
 [services.radiusd]
 type=toggle
 options=enabled|disabled
@@ -317,7 +303,7 @@ Should statsd be managed by PacketFence?
 EOT
 
 [services.haproxy_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the haproxy binary. Only necessary to change if you are
 not running the RPMed version.
@@ -366,63 +352,63 @@ Should routes be managed by PacketFence?
 EOT
 
 [services.httpd_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the apache binary. Only necessary to change if you are 
 not running the RPMed version.
 EOT
 
 [services.iptables_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the iptables binary. Only necessary to change if you are
 not running the RPMed version.
 EOT
 
 [services.winbindd_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the winbindd binary. Only necessary to change if you are
 not running the RPMed version.
 EOT
 
 [services.openssl_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the openssl binary. Only necessary to change if you are not 
 running the RPMed version.
 EOT
 
 [services.dhcpd_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the dhcpd binary. Only necessary to change if you are not 
 running the RPMed version.
 EOT
 
 [services.radiusd_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the RADIUS binary. Only necessary to change if you are not 
 running the RPMed version.
 EOT
 
 [services.snmptrapd_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the snmptrapd binary. Only necessary to change if you are 
 not running the RPMed version. 
 EOT
 
 [services.keepalived_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the keepalived binary. Only necessary to change if you are
 not running the RPMed version.
 EOT
 
 [services.redis_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the redis binary. Only necessary to change if you are 
 not running the packaged version. 
@@ -435,64 +421,51 @@ description=<<EOT
 Should pfbandwidthd be managed by PacketFence?
 EOT
 
-[services.snort_binary]
-type=text
-description=<<EOT
-Location of the snort binary. Only necessary to change if you are not 
-running the RPMed version.
-EOT
-
-[services.suricata_binary]
-type=text
-description=<<EOT
-Location of the suricata binary.
-EOT
-
 [services.carbon-cache_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the carbon-cache binary.
 EOT
 
 [services.carbon-relay_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the carbon-relay binary.
 EOT
 
 [services.collectd_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the collectd binary.
 EOT
 
 [services.radsniff_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the radsniff binary.
 EOT
 
 [services.p0f_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the p0f binary.
 EOT
 
 [services.statsd_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the statsd (node) binary.
 EOT
 
 [services.arp_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the arp binary. Only necessary to change if you are not 
 running the RPMed version.
 EOT
 
 [services.routes_binary]
-type=text
+type=hidden
 description=<<EOT
 Location of the ip binary. Only necessary to change if you are not
 running the RPMed version.
