--- a/conf/systemd/packetfence-snmptrapd.service
+++ b/conf/systemd/packetfence-snmptrapd.service
@@ -10,7 +10,7 @@ StartLimitInterval=60
 Type=notify
 PIDFile=/usr/local/pf/var/run/snmptrapd.pid
 ExecStartPre=/usr/local/pf/bin/pfcmd service snmptrapd generateconfig
-ExecStart=/usr/sbin/snmptrapd -f -n -c /usr/local/pf/var/conf/snmptrapd.conf -C -A -Lf /usr/local/pf/logs/snmptrapd.log -p /usr/local/pf/var/run/snmptrapd.pid -On 172.20.20.98:162
+ExecStart=/usr/sbin/snmptrapd -f -n -c /usr/local/pf/var/conf/snmptrapd.conf -C -A -Lf /usr/local/pf/logs/snmptrapd.log -p /usr/local/pf/var/run/snmptrapd.pid 
 ExecReload=/bin/kill -HUP $MAINPID
 Slice=packetfence.slice
 Restart=on-failure
