--- a/raddb/mods-config/sql/main/mysql/queries.conf
+++ b/raddb/mods-config/sql/main/mysql/queries.conf
@@ -286,7 +286,7 @@ accounting {
 					 FROM_UNIXTIME(\
 						%{integer:Event-Timestamp}), \
 					 '%{Framed-IP-Address}', \
-					 %{%{Acct-Session-Time}:-NULL}, \
+					 '%{%{Acct-Session-Time}:-0}', \
 					 '%{%{Acct-Input-Gigawords}:-0}' \
 						<< 32 | '%{%{Acct-Input-Octets}:-0}', \
 					 '%{%{Acct-Output-Gigawords}:-0}' \
@@ -347,7 +347,7 @@ accounting {
 					 FROM_UNIXTIME(\
 						%{integer:Event-Timestamp}), \
 					 '%{Framed-IP-Address}', \
-					 %{%{Acct-Session-Time}:-NULL}, \
+					 '%{%{Acct-Session-Time}:-0}', \
 					 '%{%{Acct-Input-Gigawords}:-0}' \
 						<< 32 | '%{%{Acct-Input-Octets}:-0}', \
 					 '%{%{Acct-Output-Gigawords}:-0}' \
