Defined Acct-Session-Time to 0 if it's undef

--- a/raddb/mods-config/sql/main/mysql/queries.conf
+++ b/raddb/mods-config/sql/main/mysql/queries.conf
@@ -324,7 +324,7 @@ accounting {
 					FROM_UNIXTIME(%{integer:Event-Timestamp} - %{%{Acct-Session-Time}:-0}), \
 					FROM_UNIXTIME(%{integer:Event-Timestamp}), \
 				    NULL, \
-					%{%{Acct-Session-Time}:-NULL}, \
+					'%{%{Acct-Session-Time}:-0}', \
 					'%{Acct-Authentic}', \
 					'%{Connect-Info}', \
 					'', \
@@ -386,7 +386,7 @@ accounting {
 					FROM_UNIXTIME(%{integer:Event-Timestamp} - %{%{Acct-Session-Time}:-0}), \
 					FROM_UNIXTIME(%{integer:Event-Timestamp}), \
 					FROM_UNIXTIME(%{integer:Event-Timestamp}), \
-					%{%{Acct-Session-Time}:-NULL}, \
+					'%{%{Acct-Session-Time}:-0}', \
 					'%{Acct-Authentic}', \
 					'', \
 					'%{Connect-Info}', \
